Fixed issues allowing JDK11 runtime.